<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    tools:context="com.example.rmontoya.installationwizardfragment.fragments.FinishFragment">

    <TextView
        style="@style/paragraph_text"
        android:text="@string/finish_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/standard_element_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/standard_element_margin"
            android:text="@string/back_button" />

        <Button
            android:id="@+id/exit_wizard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_wizard" />

    </LinearLayout>

</RelativeLayout>