<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    tools:context="com.example.rmontoya.installationwizardfragment.fragments.InstallationFragment">


    <TextView
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/start_title_margin_top"
        android:padding="@dimen/standard_element_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/installation_title" />

    <ProgressBar
        android:id="@+id/progress_bar_installation"
        android:layout_centerInParent="true"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_margin="@dimen/standard_element_padding"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_button"
            android:text="@string/cancel_button"
            android:layout_marginRight="@dimen/standard_element_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/next_button"
            android:text="@string/next"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



</RelativeLayout>
